--- a/ansible/playbooks/bootstrap-k3s.yml
+++ b/ansible/playbooks/bootstrap-k3s.yml
@@ -93,63 +93,33 @@
         mode: "0644"
 
     # -------------------------------------------------------------
-    # Scale CoreDNS deployment to 3 replicas
+    # Deploy CoreDNS HA Enforcer Script
     # -------------------------------------------------------------
-    - name: Scale CoreDNS deployment to 3 replicas
+    - name: Deploy CoreDNS HA Enforcer Script
+      tags: coredns_ha
       when:
         - k3s_control_node | bool
         - inventory_hostname == groups['all'][0]
-      ansible.builtin.command:
-        cmd: kubectl scale deployment coredns -n kube-system --replicas=3
-      environment:
-        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-      register: scale_result
-      changed_when: "'scaled' in scale_result.stdout"
+      ansible.builtin.copy:
+        dest: /var/lib/rancher/k3s/server/manifests/coredns-enforcer.sh
+        mode: "0755"
+        content: |
+          #!/bin/sh
+          K=/etc/rancher/k3s/k3s.yaml
 
-    - name: Configure CoreDNS resources and topology constraints
-      when:
-        - k3s_control_node | bool
-        - inventory_hostname == groups['all'][0]
-      ansible.builtin.command:
-        cmd: |
-          kubectl patch deployment coredns -n kube-system --type='strategic' -p='{
-            "spec": {
-              "template": {
-                "spec": {
-                  "containers": [{
-                    "name": "coredns",
-                    "resources": {
-                      "requests": {"cpu": "200m", "memory": "128Mi"},
-                      "limits": {"cpu": "200m", "memory": "128Mi"}
-                    }
-                  }],
-                  "topologySpreadConstraints": [{
-                    "maxSkew": 1,
-                    "topologyKey": "kubernetes.io/hostname",
-                    "whenUnsatisfiable": "DoNotSchedule",
-                    "labelSelector": {
-                      "matchLabels": {"k8s-app": "kube-dns"}
-                    }
-                  }]
-                }
-              }
-            }
-          }'
-      environment:
-        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-      register: patch_result
-      changed_when: "'patched' in patch_result.stdout"
-      failed_when:
-        - patch_result.rc != 0
-        - "'already exists' not in patch_result.stderr"
+          kubectl scale deployment coredns -n kube-system --replicas=3 --kubeconfig $K
 
-    - name: Apply CoreDNS PodDisruptionBudget
+          kubectl patch deployment coredns -n kube-system --type='strategic' -p='{"spec": {"template": {"spec": {"containers": [{"name": "coredns", "resources": {"requests": {"cpu": "200m", "memory": "128Mi"}, "limits": {"cpu": "200m", "memory": "128Mi"}}}],"topologySpreadConstraints": [{"maxSkew": 1, "topologyKey": "kubernetes.io/hostname", "whenUnsatisfiable": "DoNotSchedule", "labelSelector": {"matchLabels": {"k8s-app": "kube-dns"}}}]}}}}' --kubeconfig $K
+
+    - name: Deploy CoreDNS PodDisruptionBudget
+      tags: coredns_ha
       when:
         - k3s_control_node | bool
         - inventory_hostname == groups['all'][0]
-      ansible.builtin.command:
-        cmd: |
-          kubectl apply -f - <<EOF
+      ansible.builtin.copy:
+        dest: /var/lib/rancher/k3s/server/manifests/coredns-pdb.yaml
+        mode: "0644"
+        content: |
           apiVersion: policy/v1
           kind: PodDisruptionBudget
           metadata:
@@ -162,11 +132,6 @@
             selector:
               matchLabels:
                 k8s-app: kube-dns
-          EOF
-      environment:
-        KUBECONFIG: /etc/rancher/k3s/k3s.yaml
-      register: pdb_result
-      changed_when: "'created' in pdb_result.stdout or 'configured' in pdb_result.stdout"
 
   handlers:
     - name: Restart K3s
