--- a/ansible/playbooks/bootstrap-k3s.yml
+++ b/ansible/playbooks/bootstrap-k3s.yml
@@ -19,61 +19,89 @@
         k3s_control_node: >-
           {{ (num_control_nodes == '' or num_control_nodes is not defined) or
              (num_control_nodes | int > 0 and node_index < (num_control_nodes | int)) }}
-
-    - name: Deploy HA CoreDNS using Helm CLI
-      when:
+    
+    - name: CoreDNS | Fetch kubeconfig to ephemeral runner
+      run_once: true
+      ansible.builtin.fetch:
+        src: /etc/rancher/k3s/k3s.yaml
+        dest: "{{ playbook_dir }}/k3s-kubeconfig"
+        flat: yes
+      when: 
         - k3s_control_node | bool
         - inventory_hostname == groups['all'][0]
+    
+    - name: "CoreDNS | Deploy HA Chart (Delegated to Runner)"
+      delegate_to: localhost
+      run_once: true
+      vars:
+        k3s_api_ip: "{{ hostvars[groups['all'][0]]['ansible_host'] | default(hostvars[groups['all'][0]]['ansible_ssh_host']) }}"
       block:
-        - name: Copy CoreDNS chart to K3s node
-          ansible.builtin.copy:
-            src: coredns-1.45.0.tgz
-            dest: /tmp/coredns-1.45.0.tgz
-            mode: "0644"
+        - name: "Prepare Kubeconfig for remote access"
+          ansible.builtin.replace:
+            path: "{{ playbook_dir }}/k3s-kubeconfig"
+            regexp: '127\.0\.0\.1'
+            replace: "{{ k3s_api_ip }}"
 
-        - name: Deploy CoreDNS HA values template
-          ansible.builtin.template:
-            src: coredns-ha.yaml.j2
-            dest: /tmp/coredns-ha-values.yaml
-            mode: "0644"
+        - name: "Install CoreDNS via Helm Module"
+          kubernetes.core.helm:
+            name: coredns
+            chart_ref: coredns/coredns
+            chart_repo_url: https://coredns.github.io/helm
+            release_namespace: kube-system
+            kubeconfig: "{{ playbook_dir }}/k3s-kubeconfig"
+            wait: true
+            values:
+              replicaCount: 3
+              resources:
+                limits:
+                  cpu: 200m
+                  memory: 100Mi
+                requests:
+                  cpu: 200m
+                  memory: 100Mi
+              affinity:
+                podAntiAffinity:
+                  requiredDuringSchedulingIgnoredDuringExecution:
+                  - labelSelector:
+                      matchExpressions:
+                      - key: k8s-app
+                        operator: In
+                        values:
+                        - kube-dns
+                    topologyKey: kubernetes.io/hostname
 
-        - name: Install HA CoreDNS using Helm CLI
-          ansible.builtin.shell: |
-            set -e
-            echo "Installing HA CoreDNS via Helm CLI..."
-
-            # Install with release name "coredns" (clean pod names)
-            helm upgrade --install coredns /tmp/coredns-1.45.0.tgz \
-              --namespace kube-system \
-              --values /tmp/coredns-ha-values.yaml \
-              --wait \
-              --timeout=5m
-          changed_when: false
-
-        - name: Configure kube-dns service
-          ansible.builtin.shell: |
-            set -e
-            echo "Configuring kube-dns service..."
-
-            # Wait for CoreDNS deployment to be ready
-            kubectl wait --for=condition=available --timeout=300s deployment/coredns -n kube-system
-
-            # Create kube-dns service pointing to coredns deployment
-            kubectl expose deployment coredns --name=kube-dns \
-              --type=ClusterIP \
-              --cluster-ip=10.43.0.10 \
-              --port=53 \
-              --target-port=53 \
-              --protocol=UDP \
-              -n kube-system
-
-            # Add TCP and metrics ports
-            kubectl patch svc kube-dns -n kube-system --type=json -p '[
-              {"op": "replace", "path": "/spec/ports/0", "value": {"name": "dns", "port": 53, "protocol": "UDP", "targetPort": 53}},
-              {"op": "add", "path": "/spec/ports/-", "value": {"name": "dns-tcp", "port": 53, "protocol": "TCP", "targetPort": 53}},
-              {"op": "add", "path": "/spec/ports/-", "value": {"name": "metrics", "port": 9153, "protocol": "TCP", "targetPort": 9153}}
-            ]'
-          changed_when: false
+              service:
+                clusterIP: 10.43.0.10
+                name: kube-dns
+                annotations:
+                  prometheus.io/port: "9153"
+                  prometheus.io/scrape: "true"
+                
+              servers:
+              - zones:
+                - zone: .
+                port: 53
+                plugins:
+                - name: errors
+                - name: health
+                  config:
+                    port: 8080
+                - name: ready
+                - name: kubernetes
+                  parameters: cluster.local in-addr.arpa ip6.arpa
+                  config:
+                    pods: insecure
+                    fallthrough: in-addr.arpa ip6.arpa
+                    ttl: 30
+                - name: prometheus
+                  parameters: 0.0.0.0:9153
+                - name: forward
+                  parameters: . /etc/resolv.conf
+                - name: cache
+                  parameters: 30
+                - name: loop
+                - name: reload
+                - name: loadbalance
 
   roles:
     - role: xanmanning.k3s
@@ -143,7 +171,6 @@
         src: traefik-ha.yaml.j2
         dest: /var/lib/rancher/k3s/server/manifests/traefik-ha.yaml
         mode: "0644"
-
 
 
   handlers:
