--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -15,3 +15,5 @@ roles:
     version: "2.7.0"
   - name: xanmanning.k3s
     version: "v3.6.2"
+  - name: rancherfederal.rke2_ansible
+    version: "v2.0.0"
