--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -7,6 +7,10 @@ collections:
     version: ">=1.0.0"
   - name: kubernetes.core
     version: ">=1.0.0"
+  - name: rancherfederal.rke2_ansible
+    source: https://github.com/rancherfederal/rke2-ansible
+    type: git
+    version: 2.0.0
 
 roles:
   - name: geerlingguy.docker
@@ -15,6 +19,3 @@ roles:
     version: "2.7.0"
   - name: xanmanning.k3s
     version: "v3.6.2"
-  - name: rancherfederal.rke2_ansible
-    src: https://github.com/rancherfederal/rke2-ansible
-    version: v2.0.0
