--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,7 @@ roles_path = roles:/root/.ansible/roles
 # Connection settings
 timeout = 30
 retry_files_enabled = False
+remote_tmp = /tmp/.ansible
 
 # Output formatting
 stdout_callback = ansible.builtin.default
