🔧 (ansible-prod-lint.sh): add --offline flag to ansible-lint commands to prevent network calls during linting 📝 (.gitignore): restructure and clean up .gitignore file to focus on CI/CD and infrastructure automation needs ♻️ (bootstrap-k3s.yml): change yes/no boolean values to true/false for consistency with modern Ansible syntax ⬆️ (requirements.yml): pin specific versions for Ansible collections and update geerlingguy.docker role to 8.0.0

--- a/ansible/playbooks/bootstrap-k3s.yml
+++ b/ansible/playbooks/bootstrap-k3s.yml
@@ -105,7 +105,7 @@
       ansible.builtin.fetch:
         src: /etc/rancher/k3s/k3s.yaml
         dest: "{{ playbook_dir }}/k3s-kubeconfig"
-        flat: yes
+        flat: true
       when: inventory_hostname == groups['all'][0]
 
     - name: CoreDNS helm | Deploy HA Chart
@@ -135,4 +135,4 @@
       ansible.builtin.systemd:
         name: k3s
         state: restarted
-        daemon_reload: yes
+        daemon_reload: true
