--- a/.gitignore
+++ b/.gitignore
@@ -1,165 +1,150 @@
-# Byte-compiled / optimized
-__pycache__/
-*$py.class
+# CI/CD and Infrastructure Automation .gitignore
+# This repository contains Ansible playbooks, Helm charts, and CI/CD templates
 
-# C extensions
-*.so
+# Operating System Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
 
-# Distribution / packaging
-.Python
-develop-eggs/
+# Temporary Files
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+log/
+
+# Ansible-specific
+# Ansible retry files
+*.retry
+# Ansible vault password files (if used)
+.vault_pass
+# Ansible temporary files
+ansible*.cfg.tmp
+# Ansible local directory (created by ansible-playbook --connection=local)
+.ansible/
+
+# Kubernetes/Helm
+# Helm chart packages
+*.tgz
+# Kubernetes generated YAML files (if any)
+/kustomize/
+/overlays/
+/patches/
+
+# GitHub Actions
+# Action temporary files
+.github/actions/*/dist/
+# Workflow artifacts
+artifacts/
+# Test results
+test-results/
+
+# Docker
+# Docker build context
+.dockerignore.tmp
+# Docker volumes (if any local testing)
+/docker-volumes/
+
+# Environment and Secrets
+# Environment files (keep templates, ignore actual values)
+.env
+.env.*
+!.env.example
+!.env.template
+# Secret files (your secrets/ directory should be encrypted or in private repo)
+secrets.decrypted/
+*.key
+*.pem
+*.crt
+*.p12
+
+# IDE and Editor Files
+# VS Code
+.vscode/
+!.vscode/settings.json.template
+!.vscode/extensions.json
+# JetBrains IDEs
+.idea/
+*.iml
+*.ipr
+*.iws
+# Vim
+*.swp
+*.swo
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+.org-id-locations
+*_archive
+# Sublime Text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+
+# Build and Cache Directories
+.cache/
+build/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+target/
+out/
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Backup Files
+*.orig
+*.rej
 
-# Installer logs
+# Shell History
+.bash_history
+.zsh_history
+
+# Python (minimal - only if you have Python scripts)
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 pip-log.txt
 pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
 .coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
 .pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+.tox/
 .env
 .venv
 env/
 venv/
-ENV/
-env.bak/
-venv.bak/
-pyvenv.cfg
-Scripts
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Node.js (if you add any frontend tooling)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
 
-# Rope project settings
-.ropeproject
+# Terraform (if you add infrastructure as code)
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-#Logs
-logs
+# Ansible Galaxy roles (if downloaded locally)
+roles/
+collections/
