--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,21 +1,21 @@
 collections:
   - name: community.crypto
-    version: ">=1.0.0"
+    version: 2.26.3
   - name: community.general
-    version: ">=1.0.0"
+    version: 9.3.0
   - name: ansible.posix
-    version: ">=1.0.0"
+    version: 1.6.2
   - name: kubernetes.core
-    version: ">=1.0.0"
+    version: 5.0.0
   - name: rancherfederal.rke2_ansible
     source: https://github.com/rancherfederal/rke2-ansible.git
     type: git
-    version: main
+    version: v2.0.0
 
 roles:
   - name: geerlingguy.docker
-    version: "7.6.0"
+    version: 8.0.0
   - name: geerlingguy.firewall
-    version: "2.7.0"
+    version: 2.7.0
   - name: xanmanning.k3s
-    version: "v3.6.2"
+    version: v3.6.2
