--- a/.github/workflows/ci-cd.prod.yml
+++ b/.github/workflows/ci-cd.prod.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           # Configuration
           DOCKERFILES_PATTERNS=("Dockerfile.ansible.prod")
-          ANSIBLE_REQUIREMENTS_PATTERN="ansible/requirements.yml"
+          ANSIBLE_REQUIREMENTS_PATTERN="ansible/requirements.yml ansible/ansible.cfg"
           ANSIBLE_PATTERN="ansible/"
           
             CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} 2>/dev/null || echo "")
