🔧 (ansible): switch from rancherfederal.rke2_ansible role to lablabs.rke2 role for RKE2 cluster management 📝 (ansible): update variable names and structure to match lablabs.rke2 role format ✨ (ansible): add test_inventory.ini file for testing RKE2 cluster deployment

--- a/ansible/playbooks/bootstrap-rke2.yml
+++ b/ansible/playbooks/bootstrap-rke2.yml
@@ -54,7 +54,7 @@
           {{ total | int }}
 
   roles:
-    - role: rancherfederal.rke2_ansible.rke2
+    - role: lablabs.rke2
 
   post_tasks:
     # -------------------------------------------------------------
